--- a/Andromeda.html
+++ b/Andromeda.html
@@ -8,27 +8,30 @@
 </head>
 <body>
     
-    <h1>Guias das galáxias</h1>
-    <img width="200" src="images/Andromeda_Galaxy_(with_h-alpha).jpg" alt="">
+    
+
+    <div id="img-header"><h1>Guias das galáxias</h1></div>
+   
 
     <h2>Galáxia de Andromeda</h2>
 
     <hr>
 
     <h2>Descrição</h2>
-    <p>A galáxia de Andrômeda (Messier 31, NGC 224) é uma galáxia espiral localizada a cerca de 2,54 milhões de anos-luz de distância da Terra, na direção da constelação de Andrômeda.
+    <p>A galáxia de Andrômeda <span class="span">(Messier 31, NGC 224)</span> é uma galáxia espiral localizada a cerca de 2,54 milhões de anos-luz de distância da Terra, na direção da constelação de Andrômeda.
     </p>
 
     <h2>Dados interessantes</h2>
     <ul>
         <li>Além da Via Láctea, é a galáxia mais estudada</li>
-        <li>Suas duas galáxias satélite, Messier 32 e Messier 110, são visíveis em binóculos</li>
+        <li>Suas duas galáxias satélite, Messier 32 e <span class="span">Messier 110</span>, são visíveis em binóculos</li>
         <li>Sua distância em relação à Terra ainda não foi bem definida</li>
     </ul>
 
     <hr>
 
-    <p>Outras galáxias:
+    <p id="out-gal" >Outras galáxias: </p>
+    <p id="out-gal">   
         <a href="Olho-negro.html">Olho negro</a>
         <a href="Nuvem-mag.html">Nuvem de Magalhães</a>
     </p>
